--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=3000
 MONGO_URL=mongodb+srv://thaina02579:Lexuanthai123@cluster0.pz4yh5c.mongodb.net/task-management
+
+EMAIL_USER=thai0359396145@gmail.com
+EMAIL_PASSWORD=qjfu xuqw jhdv afdb
