--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "md5": "^2.3.0",
-    "mongoose": "^8.20.0"
+    "mongoose": "^8.20.0",
+    "nodemailer": "^7.0.11"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
